# anki-notes

./: .env  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma/migrations/20240228183358_add_workspaces/: migration.sql
src-tauri/prisma/migrations/20240229023001_add_users/: migration.sql
src-tauri/prisma/migrations/20240229023501_add_users_current_workspace/: migration.sql
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: dashboard.tsx
src/app/dashboard/_components/editor/: editor.tsx
src/app/dashboard/_components/side-left/: note-section.tsx  select-workspace.tsx  side-left.tsx  workspaces.tsx
src/components/ui/: button.tsx  command.tsx
